zabbix-front/zabbix-web-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web
  namespace: monitoring
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
  selector:
    app: zabbix-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-web
  namespace: monitoring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zabbix-web
  template:
    metadata:
      labels:
        app: zabbix-web
    spec:
      containers:
      - image: zabbix/zabbix-web-nginx-mysql:ol-5.0-latest
        livenessProbe:
          exec:
            command:
            - curl
            - -f
            - http://localhost:8080
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        name: zabbix-web
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
